<resources>
    <string name="app_name">BLE_TEST</string>
    <string name="select_device">请选择对应传感器</string>
    <string name="scanning">正在扫描…</string>
    <string name="paired">paired</string>
    <string name="btn_connect">选择设备</string>
    <string name="btn_collect">采集数据</string>
    <string name="btn_input">回看数据</string>
    <string name="cb_1">TA</string>
    <string name="cb_2">TO</string>
    <string name="current">最新:</string>
    <string name="cancel_cn">取消</string>
    <string name="Scan_cancel">取消</string>
    <string name="Scan_start">重新扫描</string>
    <string name="Stop_Scanning">暂停扫描</string>
    <string name="text_samplePeriod">采样周期 :</string>
</resources>
