<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.edu.sjtu.ble_test.MainActivity">

    <LinearLayout
        android:layout_width="130dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:id="@+id/ll_controlbox">

        <Button
            android:id="@+id/btn_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_connect"
            />

        <Button
            android:id="@+id/btn_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_collect"
            />

        <Button
            android:id="@+id/btn_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_input"
            />

        <CheckBox
            android:id="@+id/cb_showTA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cb_1"
            android:textStyle="bold"
            android:checked="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/current" />

            <TextView
                android:id="@+id/tvCurrentValue1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_showTO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cb_2"
            android:textStyle="bold"
            android:checked="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/current" />

            <TextView
                android:id="@+id/tvCurrentValue2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@id/ll_controlbox"
        android:layout_toEndOf="@id/ll_controlbox"
        android:layout_toRightOf="@+id/ll_controlbox"
        android:layout_above="@id/tv4debug"
        android:layout_margin="10dp"
        android:orientation="vertical"
        tools:ignore="RtlHardcoded">
        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lineChart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv4debug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="15sp"
        tools:ignore="RtlHardcoded" />


</RelativeLayout>
