<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#666" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingLeft="12dp"
            android:paddingRight="50dp"
            android:text="@string/select_device"
            android:textColor="#fff"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@android:drawable/ic_menu_info_details" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/lv_devicesList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:stackFromBottom="true" />

        <TextView
            android:id="@+id/tv_BL_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scanning" />

        <Button
            android:id="@+id/btn_BL_leave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Stop_Scanning" />
    </LinearLayout>

</LinearLayout>